# corewar

./: Makefile  author  corewar  hero.cor  hero.s
asmasm/includes/: asm_op.h  dasm.h
asmasm/sources/: add_token.c  data_fill.c  data_print.c  get_args_types.c  get_args_types_2.c  get_code.c  get_name_and_comment.c  main.c  messages.c  utils.c
disasm/includes/: asm_op.h  dasm.h  op.h
disasm/sources/: data_fill.c  data_print.c  get_args_types.c  get_instruction.c  main.c  messages.c  utils.c
libft/: Makefile  libft.mk
libft/includes/: ft_printf.h  get_next_line.h  libft.h
libft/sources/: ft_atoi.c  ft_bzero.c  ft_free_arr.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_iscntrl.c  ft_isdigit.c  ft_isgraph.c  ft_isint.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  (+40 more)
vm/: CMakeLists.txt  Makefile
vm/includes/: corewar.h  op.h
vm/libftprintf/includes/: ft_printf.h
vm/libftprintf/srcs/: count_of_second_part_for_float.c  fill_a_string_with_char.c  find_symbol.c  ft_count_of_digits.c  ft_count_of_digits_llu.c  ft_itoa_from_10_to_16.c  ft_new_arr_c.c  ft_new_arr_i.c  ft_printf.c  ft_printf_b.c  ft_printf_c.c  ft_printf_d.c  ft_printf_e.c  ft_printf_f.c  ft_printf_f_and_e_with_flags.c  ft_printf_mas_c.c  ft_printf_mas_i.c  ft_printf_o.c  ft_printf_p.c  ft_printf_percent.c  ft_printf_s.c  ft_printf_u.c  ft_printf_x.c  ft_putchar_with_counter.c  ft_putstr_with_counter.c  get_float_number.c  get_parametr_pole.c  itobufferdata.c  itobufferdata_llu.c  parse_and_print.c  print_common.c  print_in_while.c  print_pole_and_bufferdata.c
vm/libftprintf/srcs/libft/: Makefile  ft_atoi.c  ft_atoi_long_long.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_iswhite.c  ft_itoa.c  ft_lstadd.c  ft_lstadd_end.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  (+23 more)
vm/libftprintf/srcs/libft/includes/: get_next_line.h  libft.h
vm/src/: add.c  aff.c  and.c  arena_initialization.c  args_validation.c  check_operations.c  check_processes.c  execution.c  fork.c  help_functions.c  help_operations.c  help_operations_2.c  initialization.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  main_corewar.c  or.c  player_vaidation_2.c  players_validation.c  print.c  proccess_operations.c  process_initialization.c  st.c  sti.c  sub.c  terminate.c  xor.c  zjmp.c
